unpackaged/main/default/objects/General_Query_Counter_Comp_Setting__mdt/General_Query_Counter_Comp_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Metadata setting linked to a LWC that allows the team to show a label with a result of a SOQL count.</description>
    <label>General Query Counter Comp Setting</label>
    <pluralLabel>General Query Counter Comp Settings</pluralLabel>
</CustomObject>