unpackaged/main/default/objects/General_Query_Counter_Comp_Setting__mdt/fields/Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission__c</fullName>
    <description>Name of the custom permission needed in logged on user to show the result of the SOQL count.</description>
    <label>Custom Permission API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>