unpackaged/main/default/objects/General_Query_Counter_Comp_Setting__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Label that will be shown in the LWC component.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>