unpackaged/main/default/objects/General_Query_Counter_Comp_Setting__mdt/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <description>Count SOQL (with no alias) that will be executed and the result will be displayed to the user.</description>
    <label>SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>